--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "bootstrap": "^4.1.3",
+    "hammerjs": "^2.0.8",
+    "animate.css": "^3.7.0"
+  }
 }
